--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "fullcalendar": "^3.4.0",
     "jquery": "^3.2.1",
     "jsrender": "^0.9.87",
+    "lodash": "^4.17.4",
+    "pikaday": "^1.6.1",
     "scrapegoat": "https://github.com/alxeg/scrapegoat/tarball/fixes-dates-organizer"
   },
   "devDependencies": {
