--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "author": "alxeg",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alxeg/meeting-rooms-caldav.git"
+  },
   "dependencies": {
     "csspin": "^1.1.4",
     "express": "^4.15.4",
