--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,6 @@
 {
     "version": "0.2.0",
-    "configurations": [
-        {
+    "configurations": [{
             "name": "Launch",
             "type": "node",
             "request": "launch",
@@ -22,8 +21,23 @@
             "console": "internalConsole",
             "sourceMaps": true,
             "outFiles": []
-        },
-        {
+        }, {
+            "name": "Debug",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}/server/index.js",
+            "stopOnEntry": false,
+            "args": [],
+            "cwd": "${workspaceRoot}",
+            "runtimeExecutable": null,
+            "runtimeArgs": ["--nolazy"],
+            "env": {
+                "NODE_ENV": "development"
+            },
+            // "console": false,
+            "sourceMaps": true,
+            "outFiles": ["${workspaceRoot}/dist-srv/index.js"]
+        }, {
             "name": "Attach",
             "type": "node",
             "request": "attach",
