--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "meeting-rooms",
-  "version": "1.0.0",
-  "description": "Meeting Rooms",
-  "scripts": {
-    "start": "babel-node server/index.js",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist build:html",
-    "build": "babel-node tools/build.js",
-    "sample": "babel-node test.js"
-  },
-  "author": "alxeg",
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alxeg/meeting-rooms-caldav.git"
-  },
-  "dependencies": {
-    "csspin": "^1.1.4",
-    "express": "^4.16.3",
-    "fullcalendar": "^3.9.0",
-    "jquery": "^3.3.1",
-    "jsrender": "^0.9.90",
-    "lodash": "^4.17.10",
-    "pikaday": "^1.7.0",
-    "scrapegoat": "git+https://github.com/alxeg/scrapegoat.git#fixes-dates-organizer"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-register": "^6.24.0",
-    "cheerio": "^1.0.0-rc.2",
-    "colors": "^1.3.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^0.11.2",
-    "npm-run-all": "^4.1.3",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.21.0",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.3"
-  }
+    "name": "meeting-rooms",
+    "version": "1.0.0",
+    "description": "Meeting Rooms",
+    "scripts": {
+        "start": "babel-node server/index.js",
+        "clean-dist": "npm run remove-dist && mkdir dist",
+        "remove-dist": "node_modules/.bin/rimraf ./dist",
+        "build:html": "babel-node tools/buildHtml.js",
+        "prebuild": "npm-run-all clean-dist build:html",
+        "build": "babel-node tools/build.js",
+        "build-srv": "babel server -d dist-srv --source-maps",
+        "sample": "babel-node test.js"
+    },
+    "author": "alxeg",
+    "license": "Apache-2.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/alxeg/meeting-rooms-caldav.git"
+    },
+    "dependencies": {
+        "csspin": "^1.1.4",
+        "express": "^4.16.3",
+        "fullcalendar": "^3.9.0",
+        "jquery": "^3.3.1",
+        "jsrender": "^0.9.90",
+        "lodash": "^4.17.10",
+        "pikaday": "^1.7.0",
+        "scrapegoat": "git+https://github.com/alxeg/scrapegoat.git#fixes-dates-organizer"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.24.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-preset-es2015": "^6.24.0",
+        "babel-register": "^6.24.0",
+        "cheerio": "^1.0.0-rc.2",
+        "colors": "^1.3.1",
+        "css-loader": "^0.28.4",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^0.11.2",
+        "npm-run-all": "^4.1.3",
+        "rimraf": "^2.6.2",
+        "style-loader": "^0.21.0",
+        "url-loader": "^0.5.9",
+        "webpack": "^3.5.3"
+    }
 }
