--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
         "url": "https://github.com/alxeg/meeting-rooms-caldav.git"
     },
     "dependencies": {
+        "@fullcalendar/core": "^4.3.1",
+        "@fullcalendar/daygrid": "^4.3.0",
+        "@fullcalendar/moment": "^4.3.0",
+        "@fullcalendar/timegrid": "^4.3.0",
         "csspin": "^1.1.4",
         "express": "^4.17.1",
-        "fullcalendar": "^3.10.1",
+        "ical.js": "^1.3.0",
         "jquery": "^3.4.1",
         "jsrender": "^1.0.5",
         "lodash": "^4.17.15",
