--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "moment": "^2.24.0",
         "moment-timezone": "^0.5.27",
         "pikaday": "^1.8.0",
-        "scrapegoat": "git+https://github.com/alxeg/scrapegoat.git#attempt-to-use-tz-detection"
+        "scrapegoat": "git+https://github.com/alxeg/scrapegoat.git#attempt-to-use-tz-detection",
+        "tippy.js": "^6.3.7"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
