--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@fullcalendar/daygrid": "^4.3.0",
         "@fullcalendar/moment": "^4.3.0",
         "@fullcalendar/timegrid": "^4.3.0",
+        "cross-fetch": "^3.1.4",
         "csspin": "^1.1.4",
         "express": "^4.17.1",
         "ical.js": "^1.3.0",
