--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "babel-loader": "^7.1.5",
         "babel-preset-es2015": "^6.24.0",
         "babel-register": "^6.26.0",
-        "cheerio": "^1.0.0-rc.3",
+        "cheerio": "^1.0.0",
         "colors": "^1.4.0",
         "css-loader": "^0.28.11",
         "extract-text-webpack-plugin": "^3.0.2",
